runs/github.com/ifiddes/CMPS242-yelp-project/logs/test-notebook-Ground Truth.ipynb-2020-07-14T18.37.txt
[I 200714 18:37:36 inrepo:36] Testing notebook Ground Truth.ipynb
[W 200714 18:37:36 inrepo:48] No such kernel Python [Root], falling back on kernel language=python
[W 200714 18:37:36 inrepo:60] Using kernel python3 to provide language: python
[I 200714 18:37:37 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
%matplotlib inline
from __future__ import division
import pandas as pd
import simplejson as json  # faster json parsing
import seaborn as sns
import matplotlib.pyplot as plt
import numpy as np
from collections import Counter
import itertools
import string
------------------

[0;36m  File [0;32m"<ipython-input-1-85044b41e4ee>"[0;36m, line [0;32m5[0m
[0;31m    import seaborn as sns[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-85044b41e4ee>, line 5)


Container exited with status: {'Error': None, 'StatusCode': 1}
